--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "dependencies": {
     "@americanexpress/one-app-bundler": "^6.0.0",
     "@americanexpress/one-app-router": "^1.0.0",
+    "apollo-boost": "0.4.4",
     "content-security-policy-builder": "^2.1.0",
+    "graphql": "14.5.8",
+    "graphql-tag": "^2.10.1",
     "holocron": "^1.0.0",
     "ip": "^1.1.5",
+    "jwt-decode": "2.2.0",
     "react": "^16.12.0"
   },
   "devDependencies": {
