--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
   "dependencies": {
     "@americanexpress/one-app-bundler": "^6.0.0",
     "@americanexpress/one-app-router": "^1.0.0",
+    "@apollo/react-hooks": "^3.1.3",
     "apollo-boost": "0.4.4",
+    "apollo-link-ws": "^1.0.19",
+    "apollo-utilities": "^1.3.3",
     "content-security-policy-builder": "^2.1.0",
     "graphql": "14.5.8",
     "graphql-tag": "^2.10.1",
     "holocron": "^1.0.0",
     "ip": "^1.1.5",
     "jwt-decode": "2.2.0",
-    "react": "^16.12.0"
+    "react": "^16.12.0",
+    "subscriptions-transport-ws": "0.9.16"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
